# summon

./: Cargo.toml  LICENSE  README.md  summon.d.ts  tsconfig.json
bench/: Cargo.toml
bench/src/: main.rs
cli/: Cargo.toml
cli/src/: handle_diagnostics_cli.rs  lib.rs  main.rs
common/: Cargo.toml
common/src/: builtins.rs  utils.rs
compiler/: Cargo.toml
compiler/src/: arithmetic_merge.rs  asm.rs  assembler.rs  assembly_parser.rs  bristol_op_strings.rs  bytecode.rs  bytecode_decoder.rs  bytecode_stack_frame.rs  circuit.rs  circuit_builder.rs  circuit_signal.rs  circuit_vm.rs  circuit_vm_branch.rs  compile.rs  cs_function.rs  diagnostic.rs  diagnostics_by_path.rs  expression_compiler.rs  function_compiler.rs  generator.rs  get_span_text.rs  ident.rs  instruction.rs  lib.rs  make_generator_frame.rs  module_compiler.rs  name_allocator.rs  resolve_entry_path.rs  scope.rs  scope_analysis.rs  static_expression_compiler.rs  summon_io.rs  target_accessor.rs  tests.rs  util.rs  val_dynamic_downcast.rs
compiler/src/optimization/: kal.rs  mod.rs  try_to_kal.rs  try_to_val.rs
examples/: boolIO.ts  conditionalThrow.ts  fetch_deps.sh  greaterThan10.ts  isSignalTest.ts  loopAdd.ts  median11.ts  medianCircuit.ts  mergeTest.ts  nthPrime.ts  rockPaperScissorsLizardSpock.ts  testSha256.ts
examples/exerciseSolutions/: approvalVoting.ts  approvalVotingExtension.ts  assetSwap.ts  assetSwapExtension.ts  checkSuperMajority.ts  checkSuperMajorityExtension.ts  pokerHands.ts  sneakyTicTacToe.ts
examples/exercises/: approvalVoting.ts  assetSwap.ts  checkSuperMajority.ts  pokerHands.ts  sneakyTicTacToe.ts
examples/exercises/exerciseSolutions/: checkSuperMajority.ts
examples/lib/: hash.ts  outputArrayWorkaround.ts  range.ts  treeReduce.ts  treeSum.ts
inputs/failing/: testBinaryTree.ts  treeSort5k.ts
inputs/failing/captures/: objectMethodCaptures.ts
inputs/failing/contentHashing/: compareClassInstancesWithEqualSources.ts  compareFnsWithDuplicateRefs.ts  compareFnsWithSharedRefs.ts
inputs/passing/: spuriousAssignmentBug.ts
vm/: Cargo.toml
vm/src/: arithmetic_merge.rs  bristol_op_strings.rs  bytecode.rs  bytecode_decoder.rs  bytecode_stack_frame.rs  circuit.rs  circuit_builder.rs  circuit_signal.rs  circuit_vm.rs  circuit_vm_branch.rs  cs_function.rs  generator.rs  id_generator.rs  jsx_element.rs  lib.rs  make_generator_frame.rs  native_function.rs  operations.rs  string_methods.rs  val_dynamic_downcast.rs  vs_function.rs  vs_value.rs
vm/src/builtins/: array_builtin.rs  math_builtin.rs  mod.rs  summon_builtin.rs
vstc/: Cargo.toml
vstc/src/: assemble_command.rs  compile_command.rs  handle_diagnostics_cli.rs  main.rs  resolve_entry_path.rs  run_command.rs  test_inputs.rs  to_bytecode.rs
