[workspace]
members = ["cli", "compiler", "common", "vm", "bench", "vstc"]

resolver = "2"

[workspace.dependencies]
bincode = "2"
boolify = { git = "https://github.com/voltrevo/boolify", rev = "346d090" }
bristol-circuit = { git = "https://github.com/voltrevo/bristol-circuit", rev = "063d73a" }
num-bigint = "0.4"
num-derive = "0.4"
num-traits = "0.2"
queues = "1.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.14.0"
swc = "16"
swc_atoms = "5"
swc_common = { version = "8", features = ["tty-emitter"] }
swc_ecma_ast = "8"
swc_ecma_parser = "10"
strum = "0.27.1"
strum_macros = "0.27.1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
url = "2"
summon_compiler = { path = "compiler" }
summon_vm = { path = "vm" }
summon_common = { path = "common" }
