[package]
name = "summon_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "summonc"
path = "src/main.rs"

[dependencies]
summon_compiler = { path = "../compiler" }
url = "2.2.1"
serde = "1.0"
serde_qs = "0.8.0"
serde_json = "1.0"
bristol-circuit = { git = "https://github.com/voltrevo/bristol-circuit", rev = "288847c" }
boolify = { git = "https://github.com/voltrevo/boolify", rev = "cec0efa" }
