[package]
name = "summon_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "summonc"
path = "src/main.rs"

[dependencies]
summon_compiler = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_qs = { workspace = true }
serde_json = { workspace = true }
bristol-circuit = { workspace = true }
boolify = { workspace = true }
