[package]
name = "summon_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
summon_vm = { workspace = true }
summon_common = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
queues = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
swc_common = { workspace = true }
swc_ecma_parser = { workspace = true }
swc = { workspace = true }
swc_atoms = { workspace = true }
swc_ecma_ast = { workspace = true }
bristol-circuit = { workspace = true }
tiny-keccak = { workspace = true }
