[package]
name = "summon_vm"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { workspace = true }
num-traits = { workspace = true }
summon_common = { workspace = true }
bristol-circuit = { workspace = true }
num-derive = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
