[package]
name = "vstc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
summon_compiler = { workspace = true }
summon_vm = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_qs = { workspace = true }
serde_json = { workspace = true }
